Checkpoint: rewrite of the old UI rendering mechanism. Introduced the pluggable rendering strategies

--- a/src/FubuMVC.Validation/content/scripts/specs/fubuvalidation.ui.fixture.html
+++ b/src/FubuMVC.Validation/content/scripts/specs/fubuvalidation.ui.fixture.html
@@ -1,4 +1,19 @@
-<form id="test" action="/test" method="post">
+<form id="ValidationSummaryStrategy" action="/test" method="post">
+	<div class="alert-message block-message validation-container" style="display:none;">
+		<p>There are errors with the information you provided.</p>
+		<ul class="validation-summary"></ul>
+	</div>
+	<fieldset>
+		<div class="col">
+			<label for="FirstName">First Name *</label>
+			<div class="input">
+				<input type="text" title="First Name is required" id="FirstName" name="FirstName" class="required" />
+			</div>
+		</div>
+	</fieldset>
+</form>
+
+<form id="ElementHighlightingStrategy" action="/test" method="post">
     <div class="alert-message block-message validation-container" style="display:none;">
         <p>There are errors with the information you provided.</p>
         <ul class="validation-summary"></ul>
@@ -14,13 +29,6 @@
 			<label for="LastName">Last Name</label>
 			<div class="input">
 				<input type="text" title="Last Name is required" id="LastName" name="LastName" />
-			</div>
-		</div>
-		<div class="col">
-			<label for="LookupProperty">Lookup Property *</label>
-			<div class="input">
-				<input type="hidden" id="LookupProperty" name="LookupProperty" title="LookupProperty is required" class="lookup required" value="" />
-				<input type="text" name="LookupPropertyValue" id="LookupPropertyValue" class="autocomplete required" title="LookupProperty is required" />
 			</div>
 		</div>
 	</fieldset>
