Adds the callback and related hook for the validate call

--- a/src/FubuMVC.Validation/content/scripts/specs/fubuvalidation.plugin.fixture.html
+++ b/src/FubuMVC.Validation/content/scripts/specs/fubuvalidation.plugin.fixture.html
@@ -1,4 +1,4 @@
-<form id="EndToEnd" action="/test" method="post" data-validation-summary="true" data-validation-highlight="true">
+<form id="EndToEnd" action="/test" method="post" data-validation-mode="ajax" data-validation-summary="true" data-validation-highlight="true">
     <div class="alert-message block-message validation-container" style="display:none;">
         <p>There are errors with the information you provided.</p>
         <ul class="validation-summary"></ul>
